deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: node-app

  template:
    metadata:
      labels:
        app: node-app

    spec:
      containers:
      - name: node-app
        image: btarunkumar/node-amp:latest

        ports:
        - containerPort: 3010
