ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: node-app-ingress

spec:
  ingressClassName: nginx

  rules:
  - host: app.golearning.site

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: node-app-service
            port:
              number: 80
